--- a/src/components/oilgas/style.module.css
+++ b/src/components/oilgas/style.module.css
@@ -39,13 +39,13 @@
   font-size: 56px;
   font-weight: 700;
   /* text-shadow: 5px 5px 5px white; */
-  color: white;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .maintext p {
   font-size: 20;
   font-weight: 500;
-  color: white;
+  color: rgba(255, 255, 255, 0.6);
   margin: 10px 0px;
   /* text-shadow: 5px 2px 5px white; */
 }
@@ -105,15 +105,28 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .maintext h1 {
-    font-size: 30px;
-    color: white;
-    /* text-shadow: 5px 2px 2px white; */
+  .container {
+    height: auto;
+    background-image: none;
+    padding: 0px;
+    padding-bottom: 30px;
   }
 
+  .maintop {
+    flex-wrap: wrap;
+    margin: 0px 50px;
+    margin-bottom: 30px;
+  }
+  .maintext {
+    width: 100% !important;
+    /* padding: 20px; */
+  }
+  .maintext h1 {
+    font-size: 30px;
+    color: black;
+  }
   .maintext p {
-    color: white;
-    /* text-shadow: 5px 2px 2px white; */
+    color: black;
   }
   .mainbottom {
     padding: 20px;
@@ -122,14 +135,9 @@
 
 @media screen and (max-width: 768px) {
   .container {
-    background-image: url("../../../public/images/gasbg.png");
+    background-image: none;
     background-repeat: no-repeat;
-    background-position: bottom center;
-  }
-
-  .maintop {
-    flex-wrap: wrap;
-    margin: 0px 50px;
+    /* background-position: bottom center; */
   }
 
   .maintext {
@@ -160,14 +168,5 @@
   .container {
     padding-bottom: 0px;
     margin: 0px;
-  }
-
-  .maintext h1 {
-    font-size: 30px;
-    color: black;
-  }
-
-  .maintext p {
-    color: black;
   }
 }
