--- a/src/components/footer/style.module.css
+++ b/src/components/footer/style.module.css
@@ -2,6 +2,7 @@
   background-color: black;
   color: white;
   width: 100%;
+  overflow: hidden;
 }
 
 .main {
@@ -94,5 +95,15 @@
     align-items: flex-start;
     align-content: center;
     margin-bottom: 50px !important;
+  }
+
+  .button {
+    padding: 10.83px 10.28px;
+  }
+
+  .details > p {
+    font-weight: 400;
+    font-size: 18.28px;
+    margin: 0px 5px;
   }
 }
