--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -41,6 +41,15 @@
   border-radius: 14px;
   border: 1.5px solid black;
   padding: 10px 20px;
+  transition: all 0.5s linear;
+}
+
+.button:hover {
+  background-color: black;
+}
+
+.button:hover p {
+  color: white;
 }
 
 @media screen and (max-width: 1000px) {
