--- a/src/components/realestate/sections/ourservices/style.module.css
+++ b/src/components/realestate/sections/ourservices/style.module.css
@@ -41,6 +41,23 @@
   width: 31%;
   position: relative;
 }
+.image1 {
+  background-image: url("../../../../../public/images/services/realestate1.png");
+  width: 100%;
+  height: 200px;
+}
+
+.image2 {
+  background-image: url("../../../../../public/images/services/realestate2.png");
+  width: 100%;
+  height: 200px;
+}
+
+.image3 {
+  background-image: url("../../../../../public/images/services/realestate3.png");
+  width: 100%;
+  height: 200px;
+}
 
 .subtext {
   margin-left: 10px;
@@ -74,6 +91,7 @@
     padding-right: 0px;
     margin-right: 0px;
     width: 100%;
+    margin-bottom: 20px;
   }
 
   .ourservicestext {
