--- a/src/components/sidenav/style.module.css
+++ b/src/components/sidenav/style.module.css
@@ -18,31 +18,31 @@
   margin: 10px 20px;
   cursor: pointer;
   padding: 20px 0px;
-  transition: all 1.5s linear;
+  transition: all 0.5s linear;
 }
 
 .link p:hover {
-  transform: translate(2px, 2px);
+  transform: scale(1.1);
 }
 
 .button p {
   border-bottom: none !important;
+  padding: 0px !important;
 }
 .button {
   border-radius: 14px;
-  border: 1.5px solid #cbc7c7;
-  padding: 0px 5px;
-  margin: 10px;
-  /* width: 70%; */
-  width: max-content;
+  border: 1.5px solid black;
+  padding: 10px 20px;
+  transition: all 0.2s linear;
+  margin: 0px 20px;
 }
 
 .button:hover {
-  background-color: goldenrod;
-  color: white;
+  background-color: black;
 }
-.button > p {
-  padding: 0px;
+
+.button:hover p {
+  color: white;
 }
 @media screen and (max-width: 1200px) {
   .container {
