--- a/src/components/oilgas/sections/display/style.module.css
+++ b/src/components/oilgas/sections/display/style.module.css
@@ -8,7 +8,7 @@
 }
 
 .image1 {
-  background-image: url("../../../../../public/images/fuelplug.png");
+  background-image: url("../../../../../public/images/gasclothhd.png");
   width: 50%;
   height: 500px;
 }
