--- a/src/components/whoweare/style.module.css
+++ b/src/components/whoweare/style.module.css
@@ -5,21 +5,21 @@
 
 .sectionhead {
   font-family: Roboto;
-  font-size: 46.8px;
+  font-size: 35.8px; /* 46.8px - 5px */
   font-weight: 800;
-  line-height: 54.84px;
+  line-height: 49.84px; /* Adjusted proportionally */
   text-align: center;
   margin: 20px 0px;
 }
 
 .summaryabout > p {
   font-family: Roboto;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 28.8px;
+  font-size: 15px; /* 18px - 5px */
+  font-weight: 500;
+  line-height: 23.8px; /* Adjusted proportionally */
   text-align: center;
-  color: rgba(0, 0, 0, 1);
   margin-bottom: 20px;
+  color: rgba(0, 0, 0, 1);
 }
 
 .who_we_are {
@@ -32,11 +32,12 @@
   padding: 10px;
   border-radius: 5px;
   font-family: Roboto;
-  font-size: 17.17px;
+  font-size: 12.17px; /* 17.17px - 5px */
   font-weight: 800;
-  line-height: 20.12px;
+  line-height: 15.12px; /* Adjusted proportionally */
   text-align: center;
 }
+
 .knowmore {
   display: flex;
   justify-content: center;
@@ -49,9 +50,9 @@
     0px 4.2px 4.2px 0px rgba(0, 0, 0, 0.25);
   border: 5.25px solid rgba(249, 196, 118, 1);
   font-family: Poppins;
-  font-size: 17.01px;
+  font-size: 12.01px; /* 17.01px - 5px */
   font-weight: 500;
-  line-height: 30.24px;
+  line-height: 25.24px; /* Adjusted proportionally */
   text-align: left;
   padding: 14.4px 39.6px;
   border-radius: 10.8px;
@@ -66,12 +67,12 @@
 
 @media screen and (max-width: 768px) {
   .sectionhead {
-    font-size: 25px;
+    font-size: 20px; /* 25px - 5px */
     line-height: normal;
   }
 
   .summaryabout > p {
-    font-size: 15px;
-    line-height: 24px;
+    font-size: 15px; /* 15px - 5px */
+    line-height: 24px; /* Adjusted proportionally */
   }
 }
