--- a/src/components/aboutus/style.module.css
+++ b/src/components/aboutus/style.module.css
@@ -22,6 +22,7 @@
   width: 50%;
   height: 500px;
 }
+
 .aboutimage .subimages {
   width: 50%;
   display: flex;
@@ -45,7 +46,6 @@
 .aboutimage img {
   transform-origin: center center;
   transition: all 0.3s ease-in-out;
-  /* width: 100%; */
 }
 
 .aboutimage img:hover {
@@ -55,20 +55,21 @@
 .aboutus {
   width: 47%;
 }
+
 .aboutus > h3 {
   font-family: Roboto;
-  font-size: 37.8px;
+  font-size: 32.8px; /* 37.8px - 5px */
   font-weight: 600;
-  line-height: 45.36px;
+  line-height: 40.36px; /* 45.36px - 5px */
   text-align: left;
   color: rgba(255, 255, 255, 1);
 }
 
 .subtext {
   font-family: Roboto;
-  font-size: 25.2px;
+  font-size: 20.2px; /* 25.2px - 5px */
   font-weight: 400;
-  line-height: 30.24px;
+  line-height: 25.24px; /* 30.24px - 5px */
   letter-spacing: 0.02em;
   text-align: left;
 }
@@ -83,9 +84,9 @@
   );
   border-image-slice: 1; /* Controls how the image is sliced */
   box-shadow: 0px 4.2px 4.2px 0px rgba(0, 0, 0, 0.25);
-  padding: 16.8px 42px;
+  padding: 11.8px 37px; /* Adjusted padding to maintain proportion */
   display: flex;
-  border-radius: 16.8px;
+  border-radius: 11.8px; /* Adjusted border-radius to maintain proportion */
   margin-bottom: 10px;
   width: max-content;
 }
@@ -109,8 +110,11 @@
 
 .aboutustext {
   margin: 20px 0px;
-  padding-left: 20px;
-  border-left: 4.2px solid rgba(249, 196, 118, 1);
+  padding-left: 15px; /* Adjusted padding to maintain proportion */
+  border-left: 3.2px solid rgba(249, 196, 118, 1); /* Adjusted border width */
+  font-size: 13.78px;
+  font-weight: 400;
+  line-height: 27.04px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -124,15 +128,8 @@
   .aboutimage {
     width: 100%;
   }
-
-  /* .aboutimage img {
-    width: 100%;
-  } */
-
-  /* .aboutimage .subimages {
-    width: 100%;
-  } */
 }
+
 @media screen and (max-width: 768px) {
   .aboutimage {
     display: block;
