--- a/src/components/musiclabel/style.module.css
+++ b/src/components/musiclabel/style.module.css
@@ -41,12 +41,12 @@
   width: 40%;
 }
 .maintext h1 {
-  font-size: 56px;
+  font-size: 51px; /* 56px - 5px */
   font-weight: 700;
 }
 
 .maintext p {
-  font-size: 20;
+  font-size: 15px; /* 20px - 5px */
   font-weight: 500;
   color: rgba(34, 34, 34, 0.8);
   margin: 10px 0px;
@@ -57,9 +57,9 @@
   background-color: rgba(0, 0, 0, 1);
   color: white !important;
   width: 166px;
-  height: 60px;
+  height: 50px;
   text-align: center;
-  font-size: 18px;
+  font-size: 13px; /* 18px - 5px */
   font-weight: 500;
   border-radius: 5px;
   display: flex;
@@ -95,14 +95,14 @@
 
 .detext > p:first-child {
   font-family: Poppins;
-  font-size: 13px;
+  font-size: 8px; /* 13px - 5px */
   font-weight: 500;
   color: rgba(34, 34, 34, 1);
 }
 
 .detext > p:last-child {
   color: rgba(102, 102, 102, 1);
-  font-size: 10px;
+  font-size: 5px; /* 10px - 5px */
   font-weight: 600;
 }
 
@@ -124,7 +124,7 @@
     /* padding: 20px; */
   }
   .maintext h1 {
-    font-size: 30px;
+    font-size: 25px; /* 30px - 5px */
   }
   .mainbottom {
     padding: 20px;
@@ -149,18 +149,15 @@
   }
 
   .mainbottom {
-    border-radius: 0px;
-    margin: 10px 0px;
-    width: 100%;
-    background-color: none !important;
-    flex-direction: column;
     height: max-content;
-    align-items: flex-start;
-    margin-bottom: 0px;
-    padding-left: 50px;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px 5px;
+    margin: 20px auto;
+    width: 90%;
   }
   .det {
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
   }
 
   .container {
