--- a/src/pages/aboutus/style.module.css
+++ b/src/pages/aboutus/style.module.css
@@ -3,6 +3,11 @@
   /* padding: 30px 50px; */
 }
 
+.specialtext {
+  color: goldenrod;
+  font-size: 25px;
+  font-weight: 900;
+}
 .header {
   text-align: center;
   /* margin: 30px; */
@@ -10,17 +15,146 @@
   background-position: center;
   height: 600px;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
+.header h1 {
+  color: white;
+  font-weight: 900;
+  font-size: 40px;
+  text-shadow: 2px 2px 2px black;
+}
+
+.header p {
+  color: white;
+  font-weight: 700;
+  font-size: 20px;
+  text-shadow: 2px 2px 2px black;
+}
 .section {
-  margin-bottom: 40px;
+  width: 80%;
+  margin: auto;
+  margin-top: 30px;
 }
 
 .subsidiary {
-  margin-top: 20px;
+  /* margin-top: 20px; */
+  /* display: flex; */
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.subsidiary p {
+  color: rgba(128, 128, 128, 1);
+}
+
+.imagelist {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
 }
 
 .footer {
-  text-align: center;
+  text-align: left;
+  margin: auto;
   margin-top: 40px;
+  background-color: rgba(255, 255, 255, 1);
+  width: 80%;
+  color: rgba(128, 128, 128, 1);
+}
+
+.section h2 {
+  font-size: 30px;
+  font-family: Roboto;
+  text-align: center;
+}
+
+.gasimage1 {
+  background-image: url("../../../public/images/gascloth.jpeg");
+  width: 50%;
+  height: 400px;
+  border-radius: 5px;
+}
+
+.gasimage2 {
+  background-image: url("../../../public/images/gasclothhd.png");
+  width: 50%;
+  height: 400px;
+  border-radius: 5px;
+}
+
+.homesimage1 {
+  background-image: url("../../../public/images/services/realestate3.png");
+  width: 50%;
+  height: 400px;
+  border-radius: 5px;
+}
+
+.homesimage2 {
+  background-image: url("../../../public/images/services/realestate2.png");
+  width: 50%;
+  height: 400px;
+  border-radius: 5px;
+}
+
+.recordimage1 {
+  background-image: url("../../../public/images/musicalset.png");
+  width: 50%;
+  height: 400px;
+  border-radius: 5px;
+}
+
+.recordimage2 {
+  background-image: url("../../../public/images/microphone.png");
+  width: 50%;
+  height: 400px;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 1024px) {
+  .gasimage1 {
+    background-image: url("../../../public/images/gascloth.jpeg");
+    width: 50%;
+    height: 200px;
+    border-radius: 5px;
+  }
+
+  .gasimage2 {
+    background-image: url("../../../public/images/gasclothhd.png");
+    width: 50%;
+    height: 200px;
+    border-radius: 5px;
+  }
+
+  .homesimage1 {
+    background-image: url("../../../public/images/services/realestate3.png");
+    width: 50%;
+    height: 200px;
+    border-radius: 5px;
+  }
+
+  .homesimage2 {
+    background-image: url("../../../public/images/services/realestate2.png");
+    width: 50%;
+    height: 200px;
+    border-radius: 5px;
+  }
+
+  .recordimage1 {
+    background-image: url("../../../public/images/musicalset.png");
+    width: 50%;
+    height: 200px;
+    border-radius: 5px;
+  }
+
+  .recordimage2 {
+    background-image: url("../../../public/images/microphone.png");
+    width: 50%;
+    height: 200px;
+    border-radius: 5px;
+  }
 }
