--- a/src/components/main/style.module.css
+++ b/src/components/main/style.module.css
@@ -82,14 +82,14 @@
 
 .detext > p:first-child {
   font-family: Poppins;
-  font-size: 8px; /* 13px - 5px */
+  font-size: 13px; /* 13px - 5px */
   font-weight: 500;
   color: rgba(34, 34, 34, 1);
 }
 
 .detext > p:last-child {
   color: rgba(102, 102, 102, 1);
-  font-size: 7px; /* 10px - 5px */
+  font-size: 12px; /* 10px - 5px */
   font-weight: 600;
 }
 
@@ -118,20 +118,12 @@
   }
 
   .mainbottom {
-    /* border-radius: 0px;
-    margin: 10px 0px;
-    width: 100%;
-    background-color: none !important;
-    flex-direction: column; */
     height: max-content;
     align-items: center;
     justify-content: space-around;
     padding: 10px 5px;
     margin: 20px auto;
     width: 90%;
-    /* align-items: flex-start;
-    margin-bottom: 0px;
-    padding-left: 50px; */
   }
   .det {
     /* margin-bottom: 20px; */
@@ -140,5 +132,13 @@
   .container {
     padding-bottom: 0px;
     margin: 0px;
+  }
+
+  .detext > p:first-child {
+    font-size: 10px; /* 13px - 5px */
+  }
+
+  .detext > p:last-child {
+    font-size: 8px; /* 10px - 5px */
   }
 }
