--- a/src/components/oilgas/style.module.css
+++ b/src/components/oilgas/style.module.css
@@ -95,14 +95,14 @@
 
 .detext > p:first-child {
   font-family: Poppins;
-  font-size: 8px; /* 13px - 5px */
+  font-size: 13px; /* 13px - 5px */
   font-weight: 500;
   color: rgba(34, 34, 34, 1);
 }
 
 .detext > p:last-child {
   color: rgba(102, 102, 102, 1);
-  font-size: 8px; /* 10px - 5px */
+  font-size: 10px; /* 10px - 5px */
   font-weight: 600;
 }
 
@@ -167,5 +167,13 @@
   .container {
     padding-bottom: 0px;
     margin: 0px;
+  }
+
+  .detext > p:first-child {
+    font-size: 10px; /* 13px - 5px */
+  }
+
+  .detext > p:last-child {
+    font-size: 8px; /* 10px - 5px */
   }
 }
