--- a/src/components/realestate/style.module.css
+++ b/src/components/realestate/style.module.css
@@ -76,14 +76,14 @@
 
 .detext > p:first-child {
   font-family: Poppins;
-  font-size: 8px; /* Adjusted font size */
+  font-size: 13px; /* Adjusted font size */
   font-weight: 500;
   color: rgba(34, 34, 34, 1);
 }
 
 .detext > p:last-child {
   color: rgba(102, 102, 102, 1);
-  font-size: 7px;
+  font-size: 12px;
   font-weight: 600;
 }
 
@@ -132,5 +132,13 @@
   .container {
     padding-bottom: 0;
     margin: 0;
+  }
+
+  .detext > p:first-child {
+    font-size: 10px; /* 13px - 5px */
+  }
+
+  .detext > p:last-child {
+    font-size: 8px; /* 10px - 5px */
   }
 }
