--- a/src/components/oilgas/style.module.css
+++ b/src/components/oilgas/style.module.css
@@ -44,7 +44,7 @@
   color: white;
 }
 
-.maintext p {
+.maintext > p {
   font-size: 15px; /* 20px - 5px */
   font-weight: 500;
   color: white;
@@ -53,7 +53,6 @@
 }
 
 .button {
-  box-shadow: 0px 8px 16px 0px rgba(250, 116, 54, 0.16);
   background-color: rgba(0, 0, 0, 1);
   color: white !important;
   width: 166px;
