--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -9,9 +9,14 @@
   padding: 5px 0px;
   font-family: Roboto;
   position: fixed;
+  z-index: 120;
   top: 0px;
 }
 
+.scrolled {
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 .desktop {
   display: flex;
   align-items: center;
@@ -42,14 +47,12 @@
   border: 1.5px solid black;
   padding: 10px 20px;
   transition: all 0.5s linear;
+  background-color: black;
+  color: white;
 }
 
 .button:hover {
-  background-color: black;
-}
-
-.button:hover p {
-  color: white;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 1000px) {
