--- a/src/components/oilgas/style.module.css
+++ b/src/components/oilgas/style.module.css
@@ -1,13 +1,14 @@
 .main {
-  margin-top: 100px;
-  padding: 5px 0px;
+  /* margin-top: 100px; */
+  /* padding: 5px 0px; */
+  background-color: transparent;
 }
 
 .container {
-  padding: 30px 50px;
+  padding: 80px 50px;
   font-family: Roboto;
   /* margin: 0px 50px; */
-  background-image: url("../../../public/images/gasyellowbghd.png");
+  /* background-image: url("../../../public/images/gasyellowbghd.png"); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom right;
@@ -16,6 +17,7 @@
   flex-direction: column;
   justify-content: space-between;
   background-blend-mode: lighten;
+  transition: all 0.7s linear;
 }
 
 .maintop {
