--- a/src/components/sidenav/style.module.css
+++ b/src/components/sidenav/style.module.css
@@ -36,15 +36,14 @@
   padding: 10px 20px;
   transition: all 0.2s linear;
   margin: 0px 20px;
+  background-color: black;
+  color: white;
 }
 
 .button:hover {
-  background-color: black;
+  opacity: 0.7;
 }
 
-.button:hover p {
-  color: white;
-}
 @media screen and (max-width: 1200px) {
   .container {
     display: block;
