--- a/src/pages/aboutus/style.module.css
+++ b/src/pages/aboutus/style.module.css
@@ -1,6 +1,5 @@
 .container {
   background-color: white;
-  /* padding: 30px 50px; */
 }
 
 .specialtext {
@@ -40,6 +39,9 @@
   margin-top: 30px;
 }
 
+.headtext {
+  font-weight: 800;
+}
 .subsidiary {
   /* margin-top: 20px; */
   /* display: flex; */
@@ -49,11 +51,12 @@
 }
 
 .subsidiary p {
-  color: rgba(128, 128, 128, 1);
+  /* color: rgba(128, 128, 128, 1); */
 }
 
 .imagelist {
   display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
   margin-top: 10px;
 }
@@ -64,7 +67,7 @@
   margin-top: 40px;
   background-color: rgba(255, 255, 255, 1);
   width: 80%;
-  color: rgba(128, 128, 128, 1);
+  /* color: rgba(128, 128, 128, 1); */
 }
 
 .section h2 {
@@ -75,44 +78,50 @@
 
 .gasimage1 {
   background-image: url("../../../public/images/gascloth.jpeg");
-  width: 50%;
+  width: 45%;
   height: 400px;
   border-radius: 5px;
+  margin: 10px 5px;
 }
 
 .gasimage2 {
   background-image: url("../../../public/images/gasclothhd.png");
-  width: 50%;
+  width: 45%;
   height: 400px;
   border-radius: 5px;
+  margin: 10px 5px;
 }
 
 .homesimage1 {
   background-image: url("../../../public/images/services/realestate3.png");
-  width: 50%;
+  width: 45%;
   height: 400px;
   border-radius: 5px;
+  margin: 10px 5px;
 }
 
 .homesimage2 {
   background-image: url("../../../public/images/services/realestate2.png");
-  width: 50%;
+  width: 45%;
   height: 400px;
   border-radius: 5px;
+  margin: 10px 5px;
 }
 
 .recordimage1 {
   background-image: url("../../../public/images/musicalset.png");
-  width: 50%;
+  width: 45%;
   height: 400px;
   border-radius: 5px;
+  margin: 10px 5px;
 }
 
 .recordimage2 {
   background-image: url("../../../public/images/microphone.png");
-  width: 50%;
+  width: 45%;
   height: 400px;
   border-radius: 5px;
+  margin: 10px 5px;
 }
 
 @media screen and (max-width: 1024px) {
