--- a/src/components/oilgas/style.module.css
+++ b/src/components/oilgas/style.module.css
@@ -11,8 +11,9 @@
   /* background-image: url("../../../public/images/gasyellowbghd.png"); */
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: bottom right;
+  background-position: center;
   height: 650px;
+  width: 101%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
