--- a/src/components/footer/style.module.css
+++ b/src/components/footer/style.module.css
@@ -14,18 +14,29 @@
 }
 
 .details {
-  display: flex;
+  /* display: flex; */
+  margin-bottom: 10px;
 }
 
 .details > p {
   font-weight: 400;
   font-size: 17.28px; /* 22.28px - 5px */
-  margin: 0px 5px;
+  /* margin: 0px 5px; */
 }
 .detailshead {
-  font-weight: 500 !important;
+  font-weight: 600 !important;
 }
 
+.subdetailshead {
+  margin-bottom: 5px !important;
+}
+.subdetailshead > p:first-child {
+  font-weight: 500;
+}
+
+.subdetailshead > p {
+  font-weight: 400;
+}
 .newsletterinput {
   border: 1.11px solid #ffffff;
   padding: 11.14px 8.91px;
@@ -40,6 +51,8 @@
   font-weight: 600;
   font-size: 15.6px; /* 20.6px - 5px */
   margin: 0px 5px;
+  display: flex;
+  align-items: center;
 }
 
 .headtext {
@@ -104,6 +117,6 @@
   .details > p {
     font-weight: 400;
     font-size: 13.28px; /* 18.28px - 5px */
-    margin: 0px 5px;
+    /* margin: 0px 5px; */
   }
 }
