--- a/src/components/main/style.module.css
+++ b/src/components/main/style.module.css
@@ -149,7 +149,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
+    /* background-color: rgba(255, 255, 255, 0.8); */
     z-index: -1; /* ensure it is behind the content */
   }
 
