--- a/src/components/oilgas/style.module.css
+++ b/src/components/oilgas/style.module.css
@@ -110,7 +110,7 @@
 
 @media screen and (max-width: 1024px) {
   .container {
-    height: auto;
+    height: 500px;
     background-image: none;
     padding: 0px;
     padding-bottom: 30px;
@@ -141,7 +141,18 @@
   .container {
     background-image: none;
     background-repeat: no-repeat;
-    /* background-position: bottom center; */
+    background-position: bottom right;
+  }
+
+  .container::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgba(255, 255, 255, 0.8); */
+    z-index: -1; /* ensure it is behind the content */
   }
 
   .maintext {
