--- a/src/components/sidenav/style.module.css
+++ b/src/components/sidenav/style.module.css
@@ -6,7 +6,7 @@
   top: 0;
   min-height: 100vh;
   display: none;
-  z-index: 100;
+  z-index: 130;
   /* padding: 20px; */
 }
 
@@ -29,6 +29,7 @@
 .button p {
   border-bottom: none !important;
   padding: 0px !important;
+  font-size: 12px;
 }
 .button {
   border-radius: 14px;
@@ -38,6 +39,7 @@
   margin: 0px 20px;
   background-color: black;
   color: white;
+  width: 230px;
 }
 
 .button:hover {
