--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -5,7 +5,6 @@
     rgba(255, 255, 255, 0.6) -12.04%,
     rgba(255, 255, 255, 0.6) 122.28%
   );
-
   padding: 5px 0px;
   font-family: Roboto;
   position: fixed;
@@ -17,6 +16,7 @@
   background-color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
 .desktop {
   display: flex;
   align-items: center;
@@ -53,6 +53,47 @@
 
 .button:hover {
   opacity: 0.7;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdownToggle {
+  display: flex;
+  align-items: center;
+}
+
+.dropdownToggle::after {
+  content: "\2193"; /* Down arrow */
+  font-size: 16px; /* Adjust size as needed */
+  margin-left: 5px; /* Adjust spacing as needed */
+}
+
+.dropdownContent {
+  display: flex;
+  width: 110px;
+  flex-direction: column;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  background-color: #f3f3f3;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.dropdownContent p {
+  padding: 10px;
+  font-size: 16px;
+  /* color: white; */
+}
+
+.dropdownContent p:hover {
+  cursor: pointer;
+  background-color: black;
+  color: white;
 }
 
 @media screen and (max-width: 1000px) {
