--- a/src/components/sidenav/style.module.css
+++ b/src/components/sidenav/style.module.css
@@ -23,7 +23,45 @@
 }
 
 .link p:hover {
-  transform: translate(2px, 2px);
+  /* transform: translate(2px, 2px); */
+}
+
+.dropdown {
+  position: relative;
+}
+.dropdownToggle {
+  display: flex;
+  align-items: center;
+}
+
+.dropdownToggle::after {
+  content: "\2193"; /* Down arrow */
+  font-size: 16px; /* Adjust size as needed */
+  margin-left: 5px; /* Adjust spacing as needed */
+}
+
+.dropdownContent {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 20px;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.dropdownContent p {
+  padding: 10px;
+  font-size: 16px;
+  /* color: white; */
+}
+
+.dropdownContent p:hover {
+  cursor: pointer;
+  background-color: black;
+  color: white;
 }
 
 .button p {
@@ -31,6 +69,7 @@
   padding: 0px !important;
   font-size: 12px;
 }
+
 .button {
   border-radius: 14px;
   border: 1.5px solid black;
