--- a/src/components/aboutus/style.module.css
+++ b/src/components/aboutus/style.module.css
@@ -18,7 +18,7 @@
 }
 
 .image1 {
-  background-image: url("../../../public/images/aboutus/home.png");
+  background-image: url("../../../public/images/aboutus/home.jpeg");
   width: 50%;
   height: 500px;
 }
@@ -38,7 +38,7 @@
 }
 
 .image3 {
-  background-image: url("../../../public/images/aboutus/music.png");
+  background-image: url("../../../public/images/aboutus/music.jpeg");
   width: 100%;
   height: 200px;
 }
