--- a/src/components/musiclabel/style.module.css
+++ b/src/components/musiclabel/style.module.css
@@ -107,12 +107,17 @@
 }
 
 @media screen and (max-width: 1024px) {
+  .main {
+    background-image: url("../../../public/images/aboutus/music.jpeg");
+  }
   .container {
     height: 500px;
-    /* background-image: none; */
+    background-image: none;
     padding: 0px;
     padding-bottom: 30px;
-    background-size: 50%;
+    background-size: cover;
+    background-image: url("../../../public/images/aboutus/music.jpeg");
+
     background-position: top right;
   }
 
